# flagsmith-rust-client-async

./: .gitignore  Cargo.toml  README.md
src/: error.rs  flagsmith.rs  lib.rs
src/flagsmith/: analytics.rs  mod.rs  models.rs
src/flagsmith_async/: analytics.rs  mod.rs  models.rs
tests/: integration_test.rs
tests/fixtures/: mod.rs
