[package]
name = "flagsmith-async"
version = "1.1.0"
authors = ["Gagan Trivedi <gagan.trivedi@flagsmith.com>", "Michał Buczko <michal@buczko.pl>"]
edition = "2024"
license = "BSD-3-Clause"
description = "Flagsmith SDK for Rust"
homepage = "https://flagsmith.com/"
repository = "https://github.com/Flagsmith/flagsmith-rust-client"
readme = "README.md"
categories = ["config", "api-bindings"]
keywords = ["Flagsmith", "feature-flag", "remote-config"]

[dependencies]
tokio = { version = "1.43", default-features = false }
futures = { version = "0.3" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.12", default-features = false, features = ["json"] }
url = "2.1"
chrono = { version = "0.4", default-features = false }
log = "0.4"
flagsmith-flag-engine = "0.4.0"

[dev-dependencies]
httpmock = "0.7.0"
rstest = "0.25.0"
